--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -15,6 +15,7 @@
     "axios": "^1.5.0",
     "formik": "^2.4.4",
     "formkit": "^0.19.3",
+    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
@@ -26,6 +27,8 @@
   },
   "proxy": "http://localhost:3001",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -49,5 +52,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "/build/index.html"
+  "homepage": "https://moras98.github.io/"
 }
